2013-07-16  Tobias Burnus  <burnus@net-b.de>

PR fortran/57912
        * trans-expr.c (gfc_trans_scalar_assign): Correct if
        condition for caf realloc.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@200987 138bc75d-0d04-0410-961f-82ee72b054a4